--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -1,1 +1,20 @@
 @import reset
+
+html, body
+  width: 100%
+  height: 100%
+  margin: 0px
+
+#browser-warning
+  display: none
+
+canvas
+  z-index: 0
+  position: absolute
+  top: 0
+  left: 0
+
+#controls
+  position: absolute
+  top: 20px
+  left: 20px
