--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -15,6 +15,6 @@ canvas
   left: 0
 
 #controls
-  position: absolute
-  top: 20px
-  left: 20px
+  position: relative
+  width: 90px
+  margin: 20px auto
