--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -17,4 +17,12 @@ canvas
 #controls
   position: relative
   width: 90px
-  margin: 20px auto
+  margin: 10px auto
+
+#treat
+  -webkit-transform: rotateX(-30deg) rotateY(30deg)
+  -webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.2))
+
+#treat2
+  -webkit-transform: rotateX(-30deg) rotateY(-30deg)
+  -webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.2))
