--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -19,8 +19,8 @@ canvas
   width: 90px
   margin: 10px auto
 
-#treat
-  -webkit-transform: rotateX(-30deg) rotateY(30deg)
+#treat1
+  -webkit-transform: rotateX(30deg) rotateY(-30deg)
   -webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.2))
 
 #treat2
