Drop down to one canvas with one bubble in the middle

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -8,21 +8,14 @@ html, body
 #browser-warning
   display: none
 
-canvas
-  z-index: 0
-  position: absolute
-  top: 0
-  left: -8.3%
-
 #controls
   position: relative
   width: 90px
   margin: 10px auto
 
-#treat1
-  -webkit-transform: rotateX(30deg) rotateY(-30deg)
-  -webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.2))
-
-#treat2
-  -webkit-transform: rotateX(-30deg) rotateY(-30deg)
-  -webkit-box-reflect: below 5px -webkit-linear-gradient(top, transparent, transparent 50%, rgba(255,255,255,0.2))
+#treat
+  position: absolute
+  top: 42px
+  bottom: 0
+  left: 0
+  right: 0
